--- a/virtual_bridge/android/app/src/main/AndroidManifest.xml
+++ b/virtual_bridge/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.NFC" />
+    <!-- <uses-feature android:name="android.hardware.nfc" android:required="true" /> -->
     <application
         android:label="digivice_virtual_bridge"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
