--- a/virtual_bridge/pubspec.yaml
+++ b/virtual_bridge/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  nfc_manager: ^3.5.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
