--- a/virtual_bridge/android/app/src/main/AndroidManifest.xml
+++ b/virtual_bridge/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
     <uses-permission android:name="android.permission.NFC" />
-    <!-- <uses-feature android:name="android.hardware.nfc" android:required="true" /> -->
+    <uses-feature android:name="android.hardware.nfc.hce" android:required="true" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:label="digivice_virtual_bridge"
         android:name="${applicationName}"
@@ -33,6 +36,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+         <service android:name="com.novice.flutter_nfc_hce.KHostApduService"
+              android:exported="true"
+              android:enabled="true"
+              android:permission="android.permission.BIND_NFC_SERVICE">
+            <intent-filter>
+                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <meta-data android:name="android.nfc.cardemulation.host_apdu_service"
+                      android:resource="@xml/apduservice"/>
+         </service>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
