--- a/virtual_bridge/android/app/src/main/AndroidManifest.xml
+++ b/virtual_bridge/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     <uses-feature android:name="android.hardware.nfc.hce" android:required="true" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <!-- for pip mode -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+
     <application
         android:label="digivice_virtual_bridge"
         android:name="${applicationName}"
@@ -37,17 +42,24 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-         <service android:name="com.novice.flutter_nfc_hce.KHostApduService"
-              android:exported="true"
-              android:enabled="true"
-              android:permission="android.permission.BIND_NFC_SERVICE">
-            <intent-filter>
-                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-            <meta-data android:name="android.nfc.cardemulation.host_apdu_service"
-                      android:resource="@xml/apduservice"/>
-         </service>
+        <service android:name="com.novice.flutter_nfc_hce.KHostApduService"
+             android:exported="true"
+             android:enabled="true"
+             android:permission="android.permission.BIND_NFC_SERVICE">
+           <intent-filter>
+               <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE"/>
+               <category android:name="android.intent.category.DEFAULT"/>
+           </intent-filter>
+           <meta-data android:name="android.nfc.cardemulation.host_apdu_service"
+                     android:resource="@xml/apduservice"/>
+        </service>
+
+        <service android:name="flutter.overlay.window.flutter_overlay_window.OverlayService" 
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="explanation_for_special_use"/>
+        </service>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
