--- a/virtual_bridge/android/app/src/main/AndroidManifest.xml
+++ b/virtual_bridge/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <service android:name="com.novice.flutter_nfc_hce.KHostApduService"
+        <service android:name="com.cch.flutter_custom_hce.CustomApduService"
              android:exported="true"
              android:enabled="true"
              android:permission="android.permission.BIND_NFC_SERVICE">
