--- a/virtual_bridge/pubspec.yaml
+++ b/virtual_bridge/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_nfc_hce: ^0.1.8
   # flutter_in_app_pip: ^1.7.4
   flutter_overlay_window: ^0.4.5
+  flutter_custom_hce:
+    path: ../../flutter_custom_hce
 
 dev_dependencies:
   flutter_lints: ^4.0.0
