feat: 스트리밍 및 미니뷰 관련 로직 구조 draft
아직 실행이 되는 상태는 아님

--- a/virtual_bridge/ios/Runner/Info.plist
+++ b/virtual_bridge/ios/Runner/Info.plist
@@ -2,8 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>WebKitWebViewConfiguration</key>
+	<dict>
+	    <key>Inspectable</key>
+	    <true/>
+	</dict>
+
+
 	<key>NFCReaderUsageDescription</key>
 	<string>We use NFC to read and write tags.</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
