--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
+    "build:prototype": "VITE_PROTOTYPE_MODE=true tsc -b && vite build",
+    "build:test": "NATIVE_FEATURE_TEST_MODE=true tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "matter-js": "^0.19.0",
+    "pixi.js": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -24,6 +28,7 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
+    "@types/matter-js": "^0.19.6",
     "vite": "^6.0.1"
   }
 }
