--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.13.9"
+  }
 }
