--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,13 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "matter-js": "^0.19.0",
-    "pixi.js": "^7.4.0"
+    "pixi.js": "^7.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/matter-js": "^0.19.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -28,7 +29,7 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "@types/matter-js": "^0.19.6",
+    "uuid": "^11.1.0",
     "vite": "^6.0.1"
   }
 }
