--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,35 +1,26 @@
 {
   "name": "@digivice/client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
-    "build:prototype": "VITE_PROTOTYPE_MODE=true tsc -b && vite build",
-    "build:test": "NATIVE_FEATURE_TEST_MODE=true tsc -b && vite build",
+    "build": "cd ../game && npm run build && cd ../client && tsc -b && vite build",
+    "build:test": "NATIVE_FEATURE_TEST_MODE=true cd ../game && npm run build && cd ../client && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "matter-js": "^0.19.0",
-    "pixi.js": "^7.4.0",
+    "@digivice/game": "0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/matter-js": "^0.19.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "uuid": "^11.1.0",
-    "vite": "^6.0.1"
+    "uuid": "^11.1.0"
   }
 }
