--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@digivice/root",
+  "name": "digivice",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "npm run dev --workspace @digivice/client"
+    "dev": "cd apps/client && npm run dev",
+    "build": "cd apps/client && npm run build"
   },
   "workspaces": [
     "apps/*"
@@ -12,6 +13,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.13.9"
-  }
+    "@eslint/js": "^9.15.0",
+    "@types/node": "^22.13.9",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
+  },
+  "dependencies": {}
 }
