feat: 게임 에셋 로드 정리(game -> client 에셋 복사 후 실행)

--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -17,8 +17,6 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "clean": "rimraf dist"
+    "sync-assets": "cp -r assets/* ../client/public/game/"
   }
 }
