--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,15 +12,17 @@
   },
   "dependencies": {
     "@digivice/game": "0.1.0",
+    "uuid": "^11.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "uuid": "^11.1.0"
+    "eslint-plugin-react-refresh": "^0.4.14"
   }
 }
