--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -2,9 +2,12 @@
   "name": "@digivice/game",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts"
+    }
+  },
   "dependencies": {
     "matter-js": "^0.19.0",
     "pixi.js": "^7.4.0"
