--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@digivice/game": "0.1.0",
+    "@digivice/game": "workspace:*",
     "uuid": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +23,13 @@
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14"
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "@types/node": "^22.13.9",
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
   }
 }
