--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -14,7 +14,12 @@
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@types/node": "^22.13.9",
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "typescript-eslint": "^8.15.0"
   },
   "scripts": {
     "sync-assets": "cp -r assets/* ../client/public/game/"
