--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "@digivice/game",
-  "version": "0.1.0",
-  "private": true,
-  "main": "src/index.ts",
-  "exports": {
-    ".": {
-      "import": "./src/index.ts"
-    }
-  },
-  "dependencies": {
-    "matter-js": "^0.20.0",
-    "pixi.js": "^7.4.0"
-  },
-  "devDependencies": {
-    "@types/matter-js": "^0.19.8",
-    "typescript": "^5.0.0",
-    "@types/node": "^22.13.9",
-    "@eslint/js": "^9.15.0",
-    "eslint": "^9.15.0",
-    "globals": "^15.12.0",
-    "typescript-eslint": "^8.15.0"
-  },
-  "scripts": {
-    "sync-assets": "cp -r assets/* ../client/public/game/"
-  }
+	"name": "@digivice/game",
+	"version": "0.1.0",
+	"private": true,
+	"main": "src/index.ts",
+	"exports": {
+		".": {
+			"import": "./src/index.ts"
+		}
+	},
+	"dependencies": {
+		"@shared/storage": "workspace:*",
+		"matter-js": "^0.20.0",
+		"pixi.js": "^7.4.0"
+	},
+	"devDependencies": {
+		"@types/matter-js": "^0.19.8",
+		"typescript": "^5.0.0",
+		"@types/node": "^22.13.9",
+		"@eslint/js": "^9.15.0",
+		"eslint": "^9.15.0",
+		"globals": "^15.12.0",
+		"typescript-eslint": "^8.15.0"
+	},
+	"scripts": {
+		"sync-assets": "cp -r assets/* ../client/public/game/"
+	}
 }
