--- a/shared/storage/package.json
+++ b/shared/storage/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "@shared/storage",
-  "version": "1.0.0",
-  "description": "A storage library supporting web localStorage and Flutter storage.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "jest"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
-  }
+	"name": "@shared/storage",
+	"version": "1.0.0",
+	"description": "A storage library supporting web localStorage and Flutter storage.",
+	"main": "src/index.ts",
+	"scripts": {},
+	"dependencies": {},
+	"devDependencies": {}
 }
