--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -9,17 +9,18 @@
 		}
 	},
 	"dependencies": {
+		"@pixi/filter-color-matrix": "^7.4.3",
 		"@shared/storage": "workspace:*",
 		"matter-js": "^0.20.0",
 		"pixi.js": "^7.4.0"
 	},
 	"devDependencies": {
-		"@types/matter-js": "^0.19.8",
-		"typescript": "^5.0.0",
-		"@types/node": "^22.13.9",
 		"@eslint/js": "^9.15.0",
+		"@types/matter-js": "^0.19.8",
+		"@types/node": "^22.13.9",
 		"eslint": "^9.15.0",
 		"globals": "^15.12.0",
+		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.15.0"
 	},
 	"scripts": {
