--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,35 +1,35 @@
 {
-	"name": "@digivice/client",
-	"private": true,
-	"version": "0.1.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite --host",
-		"build": "cd ../game && npm run build && cd ../client && tsc -b && vite build",
-		"build:test": "NATIVE_FEATURE_TEST_MODE=true cd ../game && npm run build && cd ../client && tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@digivice/game": "workspace:*",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwindcss": "^4.1.3",
-		"uuid": "^11.1.0"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.15.0",
-		"@tailwindcss/vite": "^4.1.3",
-		"@types/node": "^22.13.9",
-		"@types/react": "^19.1.0",
-		"@types/react-dom": "^19.1.0",
-		"@vitejs/plugin-react": "^4.3.4",
-		"eslint": "^9.15.0",
-		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-react-refresh": "^0.4.14",
-		"globals": "^15.12.0",
-		"typescript": "~5.6.2",
-		"typescript-eslint": "^8.15.0",
-		"vite": "^6.0.1"
-	}
+  "name": "@digivice/client",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "DEBUG=true vite --host",
+    "build": "cd ../game && npm run build && cd ../client && tsc -b && vite build",
+    "build:test": "NATIVE_FEATURE_TEST_MODE=true cd ../game && npm run build && cd ../client && tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@digivice/game": "workspace:*",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.3",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/node": "^22.13.9",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.1"
+  }
 }
