--- a/apps/game/tsconfig.json
+++ b/apps/game/tsconfig.json
@@ -1,16 +1,13 @@
 {
-	"extends": "../../tsconfig.base.json",
-	"compilerOptions": {
-		"outDir": "dist",
-		"declaration": true,
-		"declarationDir": "dist",
-		"composite": true,
-		"rootDir": "src",
-		"baseUrl": ".",
-		"paths": {
-			"*": ["node_modules/*", "src/*"]
-		}
-	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"]
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "declaration": true,
+    "declarationDir": "dist",
+    "composite": true,
+    "rootDir": "src",
+    "baseUrl": "."
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
