refactor: ecs 마이그레이션 중, 배경 띄우는것 까지 완료

--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@pixi/filter-color-matrix": "^7.4.3",
     "@shared/storage": "workspace:*",
-    "lodash.clonedeep": "^4.5.0",
+    "bitecs": "^0.3.40",
     "lodash.throttle": "^4.1.1",
     "matter-js": "^0.20.0",
     "pixi.js": "^7.4.0",
