--- a/apps/game/tsconfig.json
+++ b/apps/game/tsconfig.json
@@ -6,7 +6,12 @@
     "declarationDir": "dist",
     "composite": true,
     "rootDir": "src",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      // 실질적으로 dev에서 쓰이는 paths는 '@divigice/client'의 tsconfig설정임.
+      // 여기서는 ide상 ts에러가 나지 않도록 설정하는 것.
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
