--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "DEBUG=true vite --host",
+    "dev": "vite --host",
     "build": "cd ../game && npm run build && cd ../client && tsc -b && vite build",
     "build:test": "NATIVE_FEATURE_TEST_MODE=true cd ../game && npm run build && cd ../client && tsc -b && vite build",
     "lint": "eslint .",
@@ -30,6 +30,7 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
